Feat: Add new endpoints for inventory item lookup and components retrieval, and enhance response DTO structure